--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -25,24 +25,26 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/layout_item_toUAH"
-            android:layout_width="100dp"
+            android:id="@+id/layout_item_tocurency"
+            android:layout_width="60dp"
             android:layout_height="30dp"
-            android:layout_alignBaseline="@+id/layout_item_datecurency"
-            android:layout_alignBottom="@+id/layout_item_datecurency"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:text="100k"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/layout_item_toUAH"
+            android:layout_toStartOf="@+id/layout_item_toUAH"
+            android:text="$"
             android:textAlignment="viewEnd"
             android:textSize="14sp"
             android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/layout_item_from"
+            android:id="@+id/layout_item_toUAH"
             android:layout_width="100dp"
             android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="100dp"
             android:text="100k"
             android:textAlignment="viewEnd"
             android:textSize="14sp"
@@ -53,23 +55,24 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@+id/layout_item_from"
-            android:layout_toStartOf="@+id/layout_item_from"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@+id/layout_item_datecurency"
+            android:layout_toRightOf="@+id/layout_item_datecurency"
             android:text="$"
             android:textAlignment="center"
             android:textSize="14sp"
             android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/layout_item_tocurency"
-            android:layout_width="60dp"
+            android:id="@+id/layout_item_from"
+            android:layout_width="100dp"
             android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="73dp"
-            android:layout_marginRight="73dp"
-            android:text="$"
+            android:layout_marginLeft="75dp"
+            android:layout_toEndOf="@+id/layout_item_fromcurrency"
+            android:layout_toRightOf="@+id/layout_item_fromcurrency"
+            android:text="100k"
             android:textAlignment="viewEnd"
             android:textSize="14sp"
             android:textStyle="italic" />
