--- a/app/src/main/res/layout-land/activity_settings.xml
+++ b/app/src/main/res/layout-land/activity_settings.xml
@@ -14,21 +14,19 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="105dp"
         android:text="@string/WelcomeText" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="170dp"
-        android:layout_marginLeft="225dp"
-        android:layout_marginStart="225dp"
-        android:layout_toEndOf="@+id/Exit"
-        android:layout_toRightOf="@+id/Exit"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginBottom="101dp"
         android:text="@string/NextButton" />
 
     <Button
@@ -37,8 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button"
         android:layout_alignBottom="@+id/button"
-        android:layout_toEndOf="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_alignRight="@+id/textView"
         android:onClick="onclick"
         android:text="@string/exit" />
 </RelativeLayout>
