--- a/app/src/main/res/layout-land/item_layout.xml
+++ b/app/src/main/res/layout-land/item_layout.xml
@@ -26,63 +26,62 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:text="@+id/layout_item_datecurency"
-            android:textSize="24sp"
+            android:textSize="16sp"
             tools:text="ser34sdr234" />
 
         <TextView
-            android:id="@+id/layout_item_toUAH"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_alignBaseline="@+id/layout_item_from"
-            android:layout_alignBottom="@+id/layout_item_from"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="184dp"
-            android:layout_marginRight="184dp"
-            android:text="100k"
-            android:textAlignment="viewEnd"
-            android:textSize="24sp"
-            android:textStyle="italic" />
-
-        <TextView
             android:id="@+id/layout_item_fromcurrency"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
             android:layout_alignTop="@+id/layout_item_datecurency"
             android:layout_marginLeft="72dp"
             android:layout_marginStart="72dp"
-            android:layout_toEndOf="@+id/layout_item_datecurency"
             android:layout_toRightOf="@+id/layout_item_datecurency"
             android:text="$"
             android:textAlignment="viewEnd"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:textStyle="italic" />
 
         <TextView
             android:id="@+id/layout_item_from"
             android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_alignBaseline="@+id/layout_item_fromcurrency"
-            android:layout_alignBottom="@+id/layout_item_fromcurrency"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/layout_item_datecurency"
+            android:layout_alignTop="@+id/layout_item_fromcurrency"
             android:layout_marginLeft="126dp"
             android:layout_marginStart="126dp"
             android:layout_toEndOf="@+id/layout_item_fromcurrency"
             android:layout_toRightOf="@+id/layout_item_fromcurrency"
             android:text="100k"
             android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="italic" />
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/layout_item_toUAH"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/layout_item_tocurency"
+            android:layout_alignBottom="@+id/layout_item_tocurency"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="83dp"
+            android:layout_marginRight="83dp"
+            android:text="100k"
+            android:textAlignment="viewEnd"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/layout_item_tocurency"
             android:layout_width="70dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="154dp"
-            android:layout_marginRight="154dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
             android:layout_toLeftOf="@+id/layout_item_toUAH"
+            android:layout_toStartOf="@+id/layout_item_toUAH"
             android:text="$"
             android:textAlignment="center"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:textStyle="italic" />
 
     </RelativeLayout>
