--- a/app/src/main/res/layout-land/activity_new_operation.xml
+++ b/app/src/main/res/layout-land/activity_new_operation.xml
@@ -41,8 +41,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_weight="0.08">
+            android:layout_height="45dp"
+            android:layout_marginTop="2dp">
 
             <TextView
                 android:id="@+id/amountText"
@@ -57,43 +57,43 @@
                 android:text="Валюта"
                 android:textSize="22sp" />
 
-            <EditText
-
-                android:id="@+id/amountValue"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/amountText"
-                android:inputType="numberDecimal"
-                android:maxLength="9"
-                android:text="12345"
-                android:textAlignment="viewEnd"
-                android:textSize="22sp" />
-
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="434dp"
-                android:layout_marginRight="434dp"
+                android:layout_marginLeft="27dp"
+                android:layout_marginStart="27dp"
+                android:layout_toEndOf="@+id/amountValue"
+                android:layout_toRightOf="@+id/amountValue"
                 android:width="50dp"
                 android:contextClickable="true"
                 android:minHeight="47dp" />
+
+            <EditText
+
+                android:id="@+id/amountValue"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/amountText"
+                android:layout_toRightOf="@+id/amountText"
+                android:inputType="numberDecimal"
+                android:text="12345"
+                android:textAlignment="textEnd"
+                android:textSize="20sp" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="56dp">
+            android:layout_height="45dp"
+            android:layout_marginTop="2dp">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentTop="true"
                 android:width="100dp"
@@ -101,10 +101,24 @@
                 android:text="@string/UAH"
                 android:textSize="22sp" />
 
+            <Spinner
+                android:id="@+id/spinner2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="27dp"
+                android:layout_marginStart="27dp"
+                android:layout_toEndOf="@+id/amountUAH"
+                android:layout_toRightOf="@+id/amountUAH"
+                android:width="50dp"
+                android:contextClickable="true"
+                android:gravity="right|start"
+                android:minHeight="47dp" />
+
             <EditText
 
                 android:id="@+id/amountUAH"
-                android:layout_width="250dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/textView2"
@@ -115,28 +129,12 @@
                 android:textAlignment="viewEnd"
                 android:textSize="22sp" />
 
-            <Spinner
-                android:id="@+id/spinner2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="430dp"
-                android:layout_marginRight="430dp"
-                android:width="50dp"
-                android:contextClickable="true"
-                android:gravity="right|start"
-                android:minHeight="47dp" />
-
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="26dp"
-            android:layout_marginTop="25dp"
-            android:layout_weight="0.09">
+            android:layout_height="24dp"
+            android:layout_marginTop="5dp">
 
             <TextView
                 android:id="@+id/textView5"
@@ -147,7 +145,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:text="@string/Comment"
-                android:textSize="36sp" />
+                android:textSize="22sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -166,62 +164,55 @@
 
                 <EditText
                     android:id="@+id/amountValue3"
-                    android:layout_width="300dp"
 
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="39dp"
-                    android:layout_weight="0.10"
+                    android:layout_width="535dp"
+                    android:layout_height="125dp"
                     android:background="@drawable/edittextstyle"
                     android:text="44 1 ваш текс 1"
-                    android:textSize="36sp" />
+                    android:textSize="22sp" />
 
                 <Button
                     android:id="@+id/Save"
-                    android:layout_width="149dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_weight="0.17"
                     android:text="@string/SAVE"
-                    android:textSize="44sp" />
+                    android:textSize="22sp" />
             </LinearLayout>
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="140dp"
-            android:layout_marginTop="30dp"
             android:layout_weight="0.31">
-
-            <TextView
-                android:id="@+id/new_operation_sync_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/new_operation_sync_button"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:text="No Sync Yet"
-                android:textSize="44sp" />
-
-            <Button
-                android:id="@+id/new_operation_sync_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="29dp"
-                android:text="SYNC"
-                android:textSize="44sp" />
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="157dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/new_operation_sync_text"
                 android:layout_centerHorizontal="true"
                 android:text="@string/Back"
-                android:textSize="44sp" />
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/new_operation_sync_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/button"
+                android:layout_alignParentTop="true"
+                android:layout_alignStart="@+id/button"
+                android:text="SYNC"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/new_operation_sync_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="No Sync Yet"
+                android:textAlignment="center"
+                android:textSize="20sp" />
         </RelativeLayout>
 
 
