--- a/app/src/main/res/layout-land/activity_new_operation.xml
+++ b/app/src/main/res/layout-land/activity_new_operation.xml
@@ -79,9 +79,10 @@
                 android:layout_toEndOf="@+id/amountText"
                 android:layout_toRightOf="@+id/amountText"
                 android:inputType="numberDecimal"
+                android:maxLength="9"
                 android:text="12345"
                 android:textAlignment="textEnd"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
         </RelativeLayout>
 
